@@ -1,31 +1,13 @@
-1999-09-06  Doug Evans  <devans@casey.cygnus.com>
-
-	* sim/arm/testutils.inc: Testsuite utilities.
-	* sim/arm/adc.cgs: New testcase.
-
 Thu Sep  2 18:15:53 1999  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* configure: Regenerated to track ../common/aclocal.m4 changes.
 
 1999-08-30  Doug Evans  <devans@casey.cygnus.com>
 
-	* sim/arm/thumb/allthumb.exp: New driver for thumb testcases.
-	* sim/arm/allinsn.exp: New driver for arm testcases.
-
 	* lib/sim-defs.exp (run_sim_test): Rename all_machs arg to
 	requested_machs, now is list of machs to run tests for.
 	Delete locals AS,ASFLAGS,LD,LDFLAGS.  Use target_assemble
 	and target_link instead.
-
-1999-07-16  Ben Elliston  <bje@cygnus.com>
-
-	* sim/arm/misaligned1.ms: New test case.
-	* sim/arm/misaligned2.ms: Likewise.
-	* sim/arm/misaligned3.ms: Likewise.
-
-1999-07-16  Ben Elliston  <bje@cygnus.com>
-
-	* sim/arm/misc.exp: Enable basic tests.
 
 1999-04-21  Doug Evans  <devans@casey.cygnus.com>
 
